--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^ index.php [L]
-Redirect 301 /www.veterancomputersolutions.com https://veterancomputersolutions.com
+Redirect 301 /www.veterancomputersolutions.com/ https://veterancomputersolutions.com
